fixed z-index problem with 'drag file here' tooltip

--- a/css/style.less
+++ b/css/style.less
@@ -76,7 +76,6 @@ a.label:hover {
 
 .flying {
   position: absolute;
-  z-index: 10;
   &.right {
     right: 0;
   }
